<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_home"

            android:icon="@drawable/perfil"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/calendario"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_addDate"
            android:icon="@drawable/calendario"
            android:title="@string/menu_addDate" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/documento"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/upload"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/convenio"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/contacto"
            android:title="@string/menu_contacto" />

        <item
            android:id="@+id/nav_addConvenio"
            android:icon="@drawable/convenioad23"
            android:title="@string/menu_addConvenio" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/information"
            android:title="@string/menu_informacion" />


    </group>

    <item android:title="Cuenta">

        <menu>
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/configuracion"
                android:title="@string/menu_configuracion" />
            <item
                android:id="@+id/nav_tools2"
                android:icon="@drawable/salir"
                android:title="@string/menu_tools" />

        </menu>
    </item>

</menu>
