<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.itesco.cetisapp.ui.home.HomeFragment"

        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.itesco.cetisapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.itesco.cetisapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.itesco.cetisapp.ui.tools.ToolsFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_tools" />

    <fragment

        android:id="@+id/nav_share"
        android:name="com.example.itesco.cetisapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.itesco.cetisapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_addDate"
        android:name="com.example.itesco.cetisapp.registroFechaFragment"
        android:label="@string/menu_addDate"
        tools:layout="@layout/fragment_registro_fecha" />
    <fragment
        android:id="@+id/nav_addConvenio"
        android:name="com.example.itesco.cetisapp.addConvenioFragment"
        android:label="@string/menu_addConvenio"
        tools:layout="@layout/fragment_add_convenio" />
    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.itesco.cetisapp.updateFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/nav_informacion"
        android:name="com.example.itesco.cetisapp.informacionFragment"
        android:label="@string/menu_informacion"
        tools:layout="@layout/fragment_informacion"/>

</navigation>